dee-dev - commit

--- a/libs/components/ui/src/lib/containers/home/home.component.html
+++ b/libs/components/ui/src/lib/containers/home/home.component.html
@@ -74,7 +74,7 @@
 
                 <span class="word belize"> UI/UX Designer.</span>
 
-                <span class="word pomegranate"> JavaScript Specialist.</span>
+                <span class="word pomegranate"> Full-stack Engineer.</span>
 
             </div>
         </div>
