dee-dev - commit

--- a/libs/components/ui/src/lib/containers/about/about.component.html
+++ b/libs/components/ui/src/lib/containers/about/about.component.html
@@ -21,18 +21,14 @@
                     alt="about-image" />
 
                 <div class="bio-text">
-                    <p>I am a Frontend JavaScript Developer who has a passion for app development with more than 3 years
-                        of experience. I have completed an Information Systems Software Development Certificate, a
-                        Project Management Higher National Diploma, and a BSc Computer Systems Degree.</p>
+                    <p>I am a JavaScript Developer who has a passion to create good looking and well performing web-apps with the most up 
+                        to date Javascript framework stacks.</p>
+                   
+                        <p>I have completed an Information Systems Software Development Certificate, 
+                        a Project Management Higher National Diploma, and a BSc Computer Systems Degree. </p>
 
-                    <p>I am looking for a good opportunity to continue my career in an environment where my skills,
-                        talents and knowledge can be fully utilized as I learn and improve. I believe with hard work, a
-                        positive attitude, good relationships, and my continuous self-improvement, I will be able to
-                        make a valuable contribution to the success of any company.</p>
-
-                    <p>I am performance orientated and I do perform whatever is expected from me. I am a hard working
-                        quality individual and have a thirst for knowledge.
-                    </p>
+                    <p>I am looking for an opportunity to continue my career in a team environment where my skills, 
+                        talents and knowledge can be fully utilized as I learn and improve.</p>
                 </div>
 
             </div>
@@ -292,7 +288,7 @@
 
                                 <span class="timeline-content-info-date">
                                     <i class="fa fa-calendar-o" aria-hidden="true"></i>
-                                    Aug 2014 - Jun 2015
+                                    Aug 2014 - Jun 2017
                                 </span>
                             </div>
                             <p>Worked alongside a senior developer building a large scale medical aid system (Rt Health
