--- a/libs/components/ui/src/lib/containers/shell/shell.component.html
+++ b/libs/components/ui/src/lib/containers/shell/shell.component.html
@@ -1,8 +1,8 @@
 <div class="container-global">
-    <!-- <blueCircle-ui-toolbar class="toolbar"></blueCircle-ui-toolbar> -->
-    <!-- <blueCircle-ui-video-overlay></blueCircle-ui-video-overlay> -->
+    <!-- <dee-dev-ui-toolbar class="toolbar"></dee-dev-ui-toolbar> -->
+    <!-- <dee-dev-ui-video-overlay></dee-dev-ui-video-overlay> -->
 
     <div class="container-landing">
-            <blueCircle-ui-landing style="width: inherit; height:inherit;"></blueCircle-ui-landing>
+            <dee-dev-ui-landing style="width: inherit; height:inherit;"></dee-dev-ui-landing>
     </div>
 </div>
