--- a/libs/components/ui/src/lib/containers/home/home.component.html
+++ b/libs/components/ui/src/lib/containers/home/home.component.html
@@ -72,7 +72,7 @@
             <div class="rotating-text-one">
                 <span class="word wisteria"> Front-end Engineer.</span>
 
-                <span class="word belize"> Javascript expert.</span>
+                <span class="word belize"> Javascript specialist.</span>
 
                 <span class="word pomegranate"> Full-stack Engineer.</span>
 
