--- a/libs/components/ui/src/lib/containers/home/home.component.html
+++ b/libs/components/ui/src/lib/containers/home/home.component.html
@@ -32,10 +32,10 @@
                 review my skills, and see what I've done.</text>
             <text text-anchor="middle" x="0" y="0" class="text text-stroke text-stroke-six"
                 clip-path="url(#text6)">
-                What would you do if you had a</text>
+                I like to create good looking and well performing web-apps</text>
             <text text-anchor="middle" x="0" y="0" class="text text-stroke text-stroke-seven"
                 clip-path="url(#text7)">
-                software expert available at your fingertips?</text>
+                with the most up to date Javascript framework stacks.</text>
             <text text-anchor="middle" x="0" y="0" class="text text-stroke text-stroke-eight"
                 clip-path="url(#text8)">
                 Talk to me if you like what you see.</text>
@@ -57,10 +57,10 @@
                     <text text-anchor="middle" x="0" y="0" class="text text-two-five">review my skills, and see what I've done.</text>
                 </clipPath>
                 <clipPath id="text6">
-                    <text text-anchor="middle" x="0" y="0" class="text text-two-six">What would you do if you had a</text>
+                    <text text-anchor="middle" x="0" y="0" class="text text-two-six">I like to create good looking and well performing web-apps</text>
                 </clipPath>
                 <clipPath id="text7">
-                    <text text-anchor="middle" x="0" y="0" class="text text-two-seven">software expert available at your fingertips?</text>
+                    <text text-anchor="middle" x="0" y="0" class="text text-two-seven">with the most up to date Javascript framework stacks.</text>
                 </clipPath>
                 <clipPath id="text8">
                     <text text-anchor="middle" x="0" y="0" class="text text-two-eight">Talk to me if you like what you see.</text>
