dee-dev - commit

--- a/libs/components/ui/src/lib/containers/home/home.component.html
+++ b/libs/components/ui/src/lib/containers/home/home.component.html
@@ -35,7 +35,7 @@
                 I like to create good looking and well performing web-apps</text>
             <text text-anchor="middle" x="0" y="0" class="text text-stroke text-stroke-seven"
                 clip-path="url(#text7)">
-                with the most up to date Javascript framework stacks.</text>
+                with the most up to date JavaScript framework stacks.</text>
             <text text-anchor="middle" x="0" y="0" class="text text-stroke text-stroke-eight"
                 clip-path="url(#text8)">
                 Talk to me if you like what you see.</text>
@@ -60,7 +60,7 @@
                     <text text-anchor="middle" x="0" y="0" class="text text-two-six">I like to create good looking and well performing web-apps</text>
                 </clipPath>
                 <clipPath id="text7">
-                    <text text-anchor="middle" x="0" y="0" class="text text-two-seven">with the most up to date Javascript framework stacks.</text>
+                    <text text-anchor="middle" x="0" y="0" class="text text-two-seven">with the most up to date JavaScript framework stacks.</text>
                 </clipPath>
                 <clipPath id="text8">
                     <text text-anchor="middle" x="0" y="0" class="text text-two-eight">Talk to me if you like what you see.</text>
