dee-dev - commit

--- a/libs/components/ui/src/lib/containers/about/about.component.html
+++ b/libs/components/ui/src/lib/containers/about/about.component.html
@@ -21,14 +21,11 @@
                     alt="about-image" />
 
                 <div class="bio-text">
-                    <p>I am a JavaScript Developer who has a passion to create good looking and well performing web-apps with the most up 
-                        to date Javascript framework stacks.</p>
+                    <p>I am very excited to take on the next chapter in my life which I want to dedicate to real estate.</p>
                    
-                        <p>I have completed an Information Systems Software Development Certificate, 
-                        a Project Management Higher National Diploma, and a BSc Computer Systems Degree. </p>
+                        <p>I had spent 6 years of my life in the software development industry which I am very great full for. In short, I learned that I am not utilizing my full potential given my entrepreneurial mindset and capabilities, which demotivated me. </p>
 
-                    <p>I am looking for an opportunity to continue my career in a team environment where my skills, 
-                        talents and knowledge can be fully utilized as I learn and improve.</p>
+                    <p>After eliminating all doubt, fear and excuses, I found clarity and discovered purpose. I am highly computer literate, very competent in a wide range of trades, an effective communicator, and always thirsty for knowledge.</p>
                 </div>
 
             </div>
