dee-dev - commit

--- a/libs/components/ui/src/lib/containers/about/about.component.html
+++ b/libs/components/ui/src/lib/containers/about/about.component.html
@@ -23,9 +23,9 @@
                 <div class="bio-text">
                     <p>I am very excited to take on the next chapter in my life which I want to dedicate to real estate.</p>
                    
-                        <p>I had spent 6 years of my life in the software development industry which I am very great full for. In short, I learned that I am not utilizing my full potential given my entrepreneurial mindset and capabilities, which demotivated me. </p>
+                        <p>I've spent 6 years of my life in the software development industry which I am very greatful for. In short, I learned that I am not utilizing my full potential given my entrepreneurial mindset and capabilities, which demotivated me. </p>
 
-                    <p>After eliminating all doubt, fear and excuses, I found clarity and discovered purpose. I am highly computer literate, very competent in a wide range of trades, an effective communicator, and always thirsty for knowledge.</p>
+                    <p>After eliminating all doubt, fear and excuses, I found clarity and discovered purpose. I am highly computer literate, proficient in a wide range of trades, an effective communicator, and always thirsty for knowledge.</p>
                 </div>
 
             </div>
