--- a/libs/components/ui/src/lib/containers/about/about.component.html
+++ b/libs/components/ui/src/lib/containers/about/about.component.html
@@ -21,11 +21,26 @@
                     alt="about-image" />
 
                 <div class="bio-text">
-                    <p>I am very excited to take on the next chapter in my life which I want to dedicate to real estate.</p>
+                    <p> 
+                        I am a passionate Java Backend Engineer with a strong drive to optimize software systems and
+                        ensure smooth project execution. My goal is to enhance operational efficiency and accelerate project
+                        outcomes in the field of backend development. The opportunity to apply and further refine my skills
+                        within your esteemed company would be an honor.
+                    </p>
                    
-                        <p>I've spent 6 years of my life in the software development industry which I am very greatful for. In short, I learned that I am not utilizing my full potential given my entrepreneurial mindset and capabilities, which demotivated me. </p>
+                    <p> 
+                        I hold an Information Systems Software Development Certificate, a Project Management Higher
+                        National Diploma, and a BSc in Computer Systems, providing me with a robust educational
+                        foundation. I am now determined to secure a role that allows me to channel my enthusiasm for
+                        backend engineering. I am excited to immerse myself in an environment where my competencies,
+                        aptitudes, and expertise can thrive through continuous learning and refinement.
+                    </p>
 
-                    <p>After eliminating all doubt, fear and excuses, I found clarity and discovered purpose. I am highly computer literate, proficient in a wide range of trades, an effective communicator, and always thirsty for knowledge.</p>
+                    <p>
+                        My work ethic is deeply rooted in delivering performance-driven results. I am unwaveringly committed
+                        to meeting and exceeding expectations, characterized by my diligence, industriousness, and natural
+                        curiosity. As a dedicated learner, I am driven by a genuine thirst for continuous improvement.
+                    </p>
                 </div>
 
             </div>
