--- a/libs/components/ui/src/lib/containers/about/about.component.html
+++ b/libs/components/ui/src/lib/containers/about/about.component.html
@@ -24,8 +24,7 @@
                     <p> 
                         I am a passionate Java Backend Engineer with a strong drive to optimize software systems and
                         ensure smooth project execution. My goal is to enhance operational efficiency and accelerate project
-                        outcomes in the field of backend development. The opportunity to apply and further refine my skills
-                        within your esteemed company would be an honor.
+                        outcomes in the field of backend development.
                     </p>
                    
                     <p> 
